# mai-digital-image-processing

./: lab9.ipynb  pyproject.toml
