[project]
name = "mai-digital-image-processing"
version = "1.0.0"
description = "mai labs"
authors = [
    {name = "Fedotov Ilia",email = "ilfedotov.04@icloud.com"}
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
flask = "^3.0.3"
apiflask = "^2.2.0"
flask-cors = "^5.0.0"
scikit-learn = "^1.5.2"
imbalanced-learn = "^0.12.3"
featuretools = "^1.31.0"
gymnasium = "^1.0.0"
scikit-fuzzy = "^0.5.0"
networkx = "^3.4.2"
python-docx = "^1.1.2"
spacy = "^3.7.5"
nltk = "^3.9.1"
emoji = "^2.14.1"
mahotas = "^1.4.18"
pygad = "^3.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
